may be it is 90 percent

--- a/index.html
+++ b/index.html
@@ -3,9 +3,177 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>PH-Assignment1</title>
 </head>
 <body>
+    <header class="header">
+        <div class="ts">
+            <h3 class="at">Happy New Year</h3>
+            <h1 class="at2">New Year Party <br>Celebration</h1>
+        </div>
+
+    </header>
+    <main>
+        <section id="pp" class="containerb">
+            <div>
+                <p id="ll">65% OFF</p>
+                <p id="l2">OUR HOLIDAY DEALS ARE BETTER</p>
+                <p id="l3">ALL CATEGORIES</p>
+                <img id="pic" src="/IMG/NYP.png" alt="happy New Year">
+            </div>
+        </section>
+        <section class="party containerb">
+            <div class="party1">
+                <p class="yy">Welcome to <br> midnight party</p>
+                <p class="yyy">Embrace the warmth of joy, the melody of laughter, and the dance of dreams. <br> In this splendid midsection of the new year, may every moment <br> sparkle with hope and fulfillment. Cheers!</p>
+                <button class="dff party-btn">Join Now</button>
+
+            </div>
+            <div>
+                <img src="IMG/Group 70.png" alt="">
+            </div>
+
+        </section>
+
+
+
+
+        <div class="containerb">
+            <div class="join">
+                <p class="join-text"> <span>Place:</span> New Park Hotel <br>
+                    <span>Date:</span> 31 December Night 2023 <br>
+                    <span>Time:</span> Evening 7.30 pm to 12.30 am</p><br>
+                <button class="join-btn">Join Now</button>
+            </div>
+        </div>
+
+
+
+
+
+
+
+        <section class="containerb">
+            <div class="coming">
+                <ul class="one">
+                    <li class="x">NEW BEST OFFER</li>
+                    <li class="y">Coming Soon</li>
+                    <li class="z">This year, we would like to introduce you with a new world... a new world
+                        of fashion,luxury and many more. Stay with us.
+                    </li>
+                </ul>
+                <img src="IMG/Ellipse 1.png" alt="pic" height="365px" width="365px" id="elimg";>
+                <ul class="one">
+                    <li class="m"> <br>2024</li>
+                    <li class="z">A new year is coming with new hopes,lights and colours. Hope you get the best in this year.</li><br><br>
+                    <li class="o"><img src="IMG/Group 96.png" alt="hny" height="140px" width="140px"></li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="containerb">
+            <div class="holiday">
+                <h4 id="hh1">WHAT IS FUNCTIONAL</h4>
+                <h1 id="hh2"><span id="hh3">Holidays</span> Sale 50%</h1>
+                <p id="hh4">Yes!!! Enjoy upto 50% discount in our products. <br> All kinds of products are now on sale!
+                    Stock limited. So hurry up and grab yours!
+                </p>
+                <div class="photos">
+                    <div class="g2">
+                        <img src="IMG/Group 44.png" alt="50%" id="s2" height="200px" width="200px">
+                        <img src="IMG/girl.png" alt="wonder girl" id="s3" height="430px" width="425px">
+                    </div>
+                    <div class="g1">
+                        <img src="IMG/Rectangle 2.png" alt="Rectangle" id="s4" height="230px" width="1320px">
+                        <img src="IMG/Group 75.png" alt="box" id="s1" height="550px" width="600px">
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+        <section class="containerb">
+            <div class="portfolio">
+                <h3 id="port">THE BEST GIFTS</h3>
+                <h1 id="po">Our Awesome Portfolio</h1>
+                <p id="ppara">Check our portfolio and get your desired product in a great discount. We're waiting for you!</p>
+                <div class="item">
+                    <table>
+                        <tr>
+                            <td class="fst"><img src="IMG/Rectangle 3.png" alt="bag"></td>
+                            <td class="items"><img src="/IMG/Rectangle 4.png" alt="bag"></td>
+                            <td class="items"><img src="IMG/Rectangle 5.png" alt="heel"></td>
+                        </tr>
+                        <tr>
+                            <td class="fst"><img src="IMG/Rectangle 6.png" alt="heel"></td>
+                            <td class="items"><img src="IMG/Rectangle 7.png" alt="sunglass"></td>
+                            <td class="items"><img src="IMG/Rectangle 8.png" alt="rings"></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </section>
+
+        <section class="containerb">
+            <div class="subscribe">
+                <img src="IMG/Group 61.png" alt="icon" height="150px" width="150px">
+                <h1 id="sub">Subscribe Newsletter</h1>
+                <p id="sub2">Wanna get notifications about our products, discounts or events? Let us know your E-mail, <br> we will send you details about our deals and events. Don't 
+                    forget to subscribe!!!
+                </p>
+                <div class="rec">
+                    <input type="email" id="email" placeholder="user@gmail.com">
+                    <button id="sub3">Subscribe</button>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+        <div class="container">
+            <section class="part1">
+                <div class="part1-text">
+                    <p class="ftext">44, Big Building Roosevelt Street <br>
+                        Beach Gardens Florida 33410</p>
+                </div>
+                <div class="part1-address">
+                    <p class="ftext">+00 123 584 124</p>
+                    <p class="ftext">www.website.com</p>
+
+                </div>
+            </section>
+            <!-- <hr class="hor-line"> -->
+            <section class="part2">
+                    <div class="img1">
+                        <img src="IMG/nf/Facebook.png" alt="Facebook logo">
+
+                    </div>
+                    <div class="img2">
+                        <img src="IMG/nf/Linkedin.png" alt="linkedin logo">
+
+                    </div>
+                    <div class="img3">
+                        <img src="IMG/nf/Twitter.png" alt="Twitter logo">
+                    </div>
+                    <div class="img4">
+                        <img src="IMG/nf/Instagram.png" alt="Instagram logo">
+                    </div>
+            </section>
+            <!-- <hr class="hor-line"> -->
+            <section class="part3">
+                <div class="copywrite">
+                    <p class="ftext">2017, All Rights Reserved.</p>
+
+                </div>
+                <div class="unsubscribe">
+                    <p class="ftext">Unsubscribe</p>
+
+                </div>
+
+            </section>
+        </div>
+
+    </footer>
     
 </body>
 </html>
