--- a/index.html
+++ b/index.html
@@ -41,18 +41,12 @@
 
         <div class="containerb">
             <div class="join">
-                <p class="join-text"> <span>Place:</span> New Park Hotel <br>
-                    <span>Date:</span> 31 December Night 2023 <br>
-                    <span>Time:</span> Evening 7.30 pm to 12.30 am</p><br>
+                <p class="join-text"> <span class="joti">Place:</span> New Park Hotel <br>
+                    <span class="joti">Date:</span> 31 December Night 2023 <br>
+                    <span class="joti">Time:</span> Evening 7.30 pm to 12.30 am</p><br>
                 <button class="join-btn">Join Now</button>
             </div>
         </div>
-
-
-
-
-
-
 
         <section class="containerb">
             <div class="coming">
